# AviSynth_TIVTC

./: CHANGELOG-TDeint.md  CHANGELOG-TIVTC.md  README.md
Doc_TDeint/: tdeint.htm
Doc_TIVTC/: RequestLinear - READ ME.txt  TFM - READ ME.txt  TIVTC - READ ME.txt
src/TDeint/: CMakeLists.txt  TDeintASM.cpp  TDeinterlace.h  TDeinterlace.rc  TDeinterlace.vcxproj  TDeinterlace.vcxproj.filters
src/TIVTC/: CMakeLists.txt  RequestLinear.cpp  RequestLinear.h  TDecimate.h  TFM.cpp  TFM.h  TFMPlanar.cpp  TIVTC.rc  TIVTC.vcxproj  TIVTC.vcxproj.filters
src/common/: AnalyzeDiffMask_SIMD.hpp  AnalyzeDiffMask_avx2.cpp  AnalyzeDiffMask_avx2.h  AnalyzeDiffMask_sse41.cpp  AnalyzeDiffMask_sse41.h  TCommonASM.cpp  TCommonASM.h  info.cpp
